--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ button {
 	border-radius: 10px;
 }
 
+button:hover {
+	cursor: pointer;
+}
+
 ul {
 	list-style-position: inside;
 	list-style-type: none;
